# u-print

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.ru.md  pyproject.toml
data/: io.github.photoprint.PhotoPrint.metainfo.xml
data/desktop/: io.github.photoprint.PhotoPrint.desktop
packaging/: install-deb.sh  io.github.photoprint.PhotoPrint.yml
photoprint/: __init__.py  __main__.py  i18n.py  main.py
photoprint/core/: __init__.py  ai_generate.py  ai_sessions.py  image_loader.py  layout.py  photo_index.py  printer.py  renderer.py  settings.py
photoprint/ui/: __init__.py  ai_generate_view.py  file_manager.py  photo_item_model.py  photo_list.py  preview.py  print_dialog.py  search_view.py  sidebar.py  thumbnail_loader.py  window.py
po/: build_mo.py  build_mo.sh  photoprint.pot
po/ru/LC_MESSAGES/: photoprint.mo  photoprint.po
tests/: conftest.py  test_e2e.py  test_layout.py  test_photo_index.py  test_renderer.py
