[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photoprint"
version = "0.1.0"
description = "GTK4/libadwaita app for printing multiple photos per page (N-up) on Linux"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Maxim Letto" }]
keywords = ["photo", "print", "n-up", "gtk4", "libadwaita", "cups"]
classifiers = [
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Printing",
]

# PyGObject (gi) and pycups are taken from system packages (python3-gi, python3-cups)
# via `--system-site-packages` venv. The rest is pip-installed.
dependencies = [
    "Pillow>=10.0",
    "pillow-heif>=0.16",
    "reportlab>=4.0",
    "pypdfium2>=4.30",      # for rendering preview pages to pixels
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
photoprint = "photoprint.main:main"

[project.urls]
Homepage = "https://example.invalid/photoprint"

[tool.setuptools.packages.find]
include = ["photoprint*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET", "C4"]
ignore = [
    "E501",   # line length — handled by formatter
    "UP042",  # str+Enum dual inheritance — kept on purpose for JSON value compat
    "C408",   # dict() vs {} — readability preference in test fixtures
    "N802",   # function names — pragmatic exception for GTK helpers like Gio_list
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
